--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!--Google AdSens-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9569482346618173"
+     crossorigin="anonymous"></script>
+
     <!-- Basic Page Needs
     ================================================== -->
     <meta charset="utf-8" />
